<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >



        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp"
            app:cardElevation="1dp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_dialogHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_sure_want_to_logout"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dialogHeading"
                    android:layout_marginTop="15sp"
                    android:weightSum="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:id="@+id/btn_cancel"
                        style="@style/button"
                        android:text="@string/cancel"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button"
                        android:backgroundTint="@color/orange"
                        android:layout_marginEnd="5dp"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:id="@+id/btn_logout"
                        style="@style/button"
                        android:text="@string/log_out"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/button"
                        />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
