<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.fragments.CategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <include
            android:id="@+id/ab_appbar"
            layout="@layout/comman_app_bar" />

        <ScrollView
            app:layout_constraintTop_toBottomOf="@+id/ab_appbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_categoryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ab_appbar">

                <LinearLayout
                    android:id="@+id/ll_cardLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:orientation="vertical"
                    android:paddingStart="1dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="0dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="32dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_womenCard"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:outlineAmbientShadowColor="@color/black"
                        android:outlineSpotShadowColor="@color/black"
                        app:cardElevation="1dp"
                        app:strokeWidth="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:background="@drawable/jewellery2"
                            android:layout_height="match_parent"
                            >


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:padding="3dp"
                                android:text="@string/women"
                                android:textSize="18sp"
                                android:textColor="@color/white"
                                android:fontFamily="@font/poppins_regular"/>
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_menCard"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:outlineAmbientShadowColor="@color/black"
                        android:outlineSpotShadowColor="@color/black"
                        app:cardElevation="1dp"
                        app:strokeWidth="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/mens_jewellery_img"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_alignParentRight="true"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:textColor="@color/white"
                                android:layout_marginBottom="10dp"
                                android:padding="3dp"
                                android:text="@string/men"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="18sp" />
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_cardLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:orientation="vertical"
                    android:paddingStart="1dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_cardLayout1"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="32dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_girlCard"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:outlineAmbientShadowColor="@color/black"
                        android:outlineSpotShadowColor="@color/black"
                        app:cardElevation="1dp"
                        app:strokeWidth="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/girls_jewellery_img"
                            >


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:padding="3dp"
                                android:textColor="@color/white"
                                android:text="@string/girl"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="16sp" />
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_sportCard"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:outlineAmbientShadowColor="@color/black"
                        android:outlineSpotShadowColor="@color/black"
                        app:cardElevation="1dp"
                        app:strokeWidth="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/sports_img"
                            >


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:padding="3dp"
                                android:textColor="@color/white"
                                android:text="@string/sport"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="18sp" />
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>